# air_hockey_challenge

./: main.py  pyproject.toml  setup.py
air_hockey_agent/reppo/: .gitignore  LICENCE  README.md  models.py  pyproject.toml  reppo.py  resources  utils.py  wrappers.py
air_hockey_agent/reppo/config/algorithm/: dpo.yaml  ppo.yaml  reppo.yaml  rpo.yaml
air_hockey_agent/reppo/config/default/: dpo.yaml  ppo_atari.yaml  ppo_continuous.yaml  reppo_atari.yaml  reppo_continuous.yaml  reppo_discrete.yaml  reppo_maniskill.yaml  reppo_minatar.yaml  rpo.yaml
air_hockey_agent/reppo/config/env/: atari.yaml  brax.yaml  gymnasium.yaml  gymnax.yaml  humanoid_brax.yaml  isaaclab.yaml  maniskill.yaml  minatar.yaml  mjx_dmc.yaml  mjx_humanoid.yaml
air_hockey_agent/reppo/config/experiments/: gymnasium.yaml  maniskill.yaml  mjx_dmc_large_data.yaml  mjx_dmc_medium_data.yaml  mjx_dmc_small_data.yaml  mjx_humanoid_large_data.yaml  mjx_humanoid_small_data.yaml
air_hockey_agent/reppo/config/logging/: wandb_axel.yaml  wandb_offline.yaml  wandb_online.yaml
air_hockey_agent/reppo/config/runner/: gymnasium.yaml  gymnax.yaml  maniskill.yaml
air_hockey_agent/reppo/results/: AcrobotSwingupSparse_fasttd3_large_fasttd.csv  AcrobotSwingupSparse_fasttd3_small_fasttd.csv  AcrobotSwingupSparse_full_large_data.csv  AcrobotSwingupSparse_full_medium_data.csv  AcrobotSwingupSparse_full_small_data.csv  AcrobotSwingupSparse_large_data.csv  AcrobotSwingupSparse_large_data_no_aux_data.csv  AcrobotSwingupSparse_large_no_gauss_data.csv  AcrobotSwingupSparse_large_no_norm_data.csv  AcrobotSwingupSparse_medium_data.csv  AcrobotSwingupSparse_medium_data_no_aux_data.csv  AcrobotSwingupSparse_medium_no_gauss_data.csv  AcrobotSwingupSparse_medium_no_norm_data.csv  AcrobotSwingupSparse_no_gauss_small_data.csv  AcrobotSwingupSparse_no_norm_small_data.csv  AcrobotSwingupSparse_ppo.csv  AcrobotSwingupSparse_ppo_3.csv  AcrobotSwingupSparse_ppo_4.csv  AcrobotSwingupSparse_ppo_brax.csv  AcrobotSwingupSparse_ppo_brax_full.csv  AcrobotSwingupSparse_ppo_long.csv  AcrobotSwingupSparse_sac_brax_full.csv  AcrobotSwingupSparse_small_data.csv  AcrobotSwingupSparse_small_data_no_aux_data.csv  AcrobotSwingupSparse_small_no_gauss_data.csv  AcrobotSwingupSparse_small_no_norm_data.csv  AcrobotSwingupSparse_value_large_data.csv  AcrobotSwingupSparse_value_medium_data.csv  AcrobotSwingupSparse_value_small_data.csv  AcrobotSwingup_fasttd3_large.csv  AcrobotSwingup_fasttd3_small_fasttd.csv  AcrobotSwingup_full_large_data.csv  AcrobotSwingup_full_medium_data.csv  AcrobotSwingup_full_small_data.csv  AcrobotSwingup_large_data.csv  AcrobotSwingup_large_data_no_aux_data.csv  AcrobotSwingup_large_net.csv  AcrobotSwingup_large_no_gauss_data.csv  AcrobotSwingup_large_no_norm_data.csv  AcrobotSwingup_medium_data.csv  (+759 more)
air_hockey_agent/reppo/results/time/: AcrobotSwingupSparse_full_large_data.csv  AcrobotSwingupSparse_full_medium_data.csv  AcrobotSwingupSparse_full_small_data.csv  AcrobotSwingupSparse_large_data.csv  AcrobotSwingupSparse_large_data_no_aux_data.csv  AcrobotSwingupSparse_large_no_gauss_data.csv  AcrobotSwingupSparse_large_no_norm_data.csv  AcrobotSwingupSparse_medium_data.csv  AcrobotSwingupSparse_medium_data_no_aux_data.csv  AcrobotSwingupSparse_medium_no_gauss_data.csv  AcrobotSwingupSparse_medium_no_norm_data.csv  AcrobotSwingupSparse_ppo.csv  AcrobotSwingupSparse_ppo_3.csv  AcrobotSwingupSparse_ppo_4.csv  AcrobotSwingupSparse_ppo_brax_full.csv  AcrobotSwingupSparse_ppo_long.csv  AcrobotSwingupSparse_sac_brax_full.csv  AcrobotSwingupSparse_small_data.csv  AcrobotSwingupSparse_small_data_no_aux_data.csv  AcrobotSwingupSparse_small_no_gauss_data.csv  AcrobotSwingupSparse_small_no_norm_data.csv  AcrobotSwingupSparse_value_large_data.csv  AcrobotSwingupSparse_value_medium_data.csv  AcrobotSwingupSparse_value_small_data.csv  AcrobotSwingup_full_large_data.csv  AcrobotSwingup_full_medium_data.csv  AcrobotSwingup_full_small_data.csv  AcrobotSwingup_large_data.csv  AcrobotSwingup_large_data_no_aux_data.csv  AcrobotSwingup_large_net.csv  AcrobotSwingup_large_no_gauss_data.csv  (+623 more)
air_hockey_agent/reppo/src/: common.py  normalization.py  train.py
(+65 files in other folders)
