[project]
name = "air-hockey-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.1.0",
    "brax>=0.12.1",
    "distrax>=0.1.5",
    "flax>=0.10.3",
    "gymnax>=0.0.8",
    "hydra-core>=1.3.2",
    "hydra-submitit-launcher>=1.2.0",
    "jax-tqdm>=0.3.1",
    "jax==0.5.0 ; sys_platform == 'darwin'",
    "matplotlib>=3.10.0",
    "optax>=0.2.4",
    "optuna-integration>=4.3.0",
    "optuna>=4.3.0",
    "playground",
    "plotly>=6.0.1",
    "rliable>=1.2.0",
    "tensordict>=0.8.3",
    "torch>=2.7.1",
    "tyro>=0.9.25",
    "wandb>=0.20.1",
    "torchinfo>=1.8.0",
    "debugpy>=1.8.14",
    "notebook>=7.4.4",
    "inflection>=0.5.1",
    "scalene>=1.5.51",
    "torchinfo>=1.8.0",
    "debugpy>=1.8.14",
    "mani-skill>=3.0.0b21",
]

